--- a/locales/ru.yml
+++ b/locales/ru.yml
@@ -15,3 +15,11 @@ ru:
   good: 'Да'
   bad: 'Нет'
   final: 'Продолжаем или это конец?'
+  help: |
+    /start_game - начать новую игру
+    /stop_game - закночить игру
+    /go - продолжить игру
+    /ru - переключить на русский язык
+    /en - switch to english
+    /rules - правила игры
+    /help - справка (ты и так тут)
