--- a/locales/ru.yml
+++ b/locales/ru.yml
@@ -12,8 +12,8 @@ ru:
   role_is: 'Роль %{player} это %{role}'
   where_walks: 'Кого хочет проверить %{player}?'
   killed: 'Убийство'
-  good: 'Да'
-  bad: 'Нет'
+  good: 'Выбранный игрок - МИРНЫЙ ЖИТЕЛЬ'
+  bad: 'Выбранный игрок - МАФИЯ'
   final: 'Продолжаем или это конец?'
   help: |
     /start_game - начать новую игру
