Saving a previous team

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -23,3 +23,4 @@ en:
     /en - switch to english
     /rules - game rules
     /help - help menu (you are already here)
+    /new_team - create a new players team
