--- a/locales/ru.yml
+++ b/locales/ru.yml
@@ -23,3 +23,4 @@ ru:
     /en - switch to english
     /rules - правила игры
     /help - справка (ты и так тут)
+    /new_team - создать новую команду игроков
