--- a/locales/ru.yml
+++ b/locales/ru.yml
@@ -1,5 +1,5 @@
 ru:
-  start_game: 'Кто будет играть?'
+  start_game: 'Начнём!'
   input_players: 'Напиши имена 5х участников через пробел или запятую'
   stop_game: 'Спасибо за игру. Начнём новую?'
   roles:
